--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_floating_bottom_bar: ^1.2.0
   google_nav_bar: ^5.0.6
+  cloud_firestore: ^4.14.0
+  firebase_auth: ^4.15.3
+  firebase_storage: ^11.5.6
+  firebase_core: ^2.24.2
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
